--- a/src/scss/result.scss
+++ b/src/scss/result.scss
@@ -27,6 +27,10 @@
         font-size: 22px;
         line-height: 28px;
       }
+
+      @media ($m-xl) {
+        width: 450px;
+      }
     }
   }
 
@@ -63,6 +67,10 @@
     .bubble {
       position: relative;
       padding: 8px;
+
+      @media ($m-xl) {
+        padding: 15px;
+      }
     }
 
     .bubbles--decorative {
@@ -103,6 +111,11 @@
           & > .bubble > .bubbles--decorative {
             top: -12px;
             left: 280px;
+
+            @media ($m-xl) {
+              top: -20px;
+              left: 375px;
+            }
           }
         }
 
@@ -159,6 +172,18 @@
           left: 615px;
         }
       }
+
+      @media ($m-xl) {
+        &:nth-child(1) {
+          top: 180px;
+          right: 470px;
+        }
+
+        &:nth-child(2) {
+          top: 390px;
+          left: 660px;
+        }
+      }
     }
   }
 
@@ -201,6 +226,14 @@
 
     @media ($m-mm) {
       padding-top: 0;
+    }
+
+    @media ($m-xl) {
+      .result__pic {
+        &:last-of-type {
+          padding-top: 200px;
+        }
+      }
     }
   }
 }
