--- a/src/scss/floors.scss
+++ b/src/scss/floors.scss
@@ -25,6 +25,10 @@
       height: 105vh;
     }
 
+    @media ($m-xxl) {
+      height: 110vh;
+    }
+
     picture * {
       width: auto;
       height: 100%;
