--- a/src/scss/modules.scss
+++ b/src/scss/modules.scss
@@ -6,6 +6,10 @@
     flex-direction: column;
     align-items: center;
 
+    @media ($m-xxl) {
+      padding: 140px 0;
+    }
+
     .cards {
       row-gap: 26px;
 
@@ -29,6 +33,12 @@
             height: 48px;
             align-items: flex-start;
           }
+        }
+
+        @media ($m-xxl) {
+          width: 324px;
+          height: 164px;
+          padding: 24px;
         }
       }
 
