--- a/src/scss/result.scss
+++ b/src/scss/result.scss
@@ -116,6 +116,11 @@
               top: -20px;
               left: 375px;
             }
+
+            @media ($m-xxl) {
+              top: 60px;
+              left: 375px;
+            }
           }
         }
 
@@ -182,6 +187,18 @@
         &:nth-child(2) {
           top: 390px;
           left: 660px;
+        }
+      }
+
+      @media ($m-xxl) {
+        &:nth-child(1) {
+          top: 180px;
+          right: 580px;
+        }
+
+        &:nth-child(2) {
+          top: 390px;
+          left: 760px;
         }
       }
     }
