--- a/src/scss/stats.scss
+++ b/src/scss/stats.scss
@@ -59,6 +59,11 @@
             top: 230px;
             left: 145px;
           }
+
+          @media ($m-xl) {
+            top: 200px;
+            left: 125px;
+          }
         }
 
         &:nth-child(2) {
@@ -73,6 +78,11 @@
           @media ($m-mm) {
             top: -60px;
             left: 320px;
+          }
+
+          @media ($m-xl) {
+            top: -60px;
+            left: 660px;
           }
         }
 
@@ -90,6 +100,10 @@
             left: auto;
             right: 40px;
           }
+
+          @media ($m-xl) {
+            top: 200px;
+          }
         }
 
         box-shadow: 0px 4px 100px rgba(210, 210, 210, 0.86);
@@ -98,6 +112,11 @@
       img {
         width: 50px;
         height: 50px;
+
+        @media ($m-xl) {
+          width: 80px;
+          height: 80px;
+        }
       }
 
       @media ($m-mm) {
@@ -276,6 +295,24 @@
     &__brandbooks {
       top: 30px;
       left: 575px;
+    }
+  }
+
+  @media ($m-xl) {
+    &__years {
+      top: 30px;
+      left: 70px;
+    }
+
+    &__projects {
+      top: 95px;
+      left: 450px;
+    }
+
+    &__brandbooks {
+      top: 30px;
+      left: auto;
+      right: 40px;
     }
   }
 }
