--- a/src/scss/floors.scss
+++ b/src/scss/floors.scss
@@ -246,10 +246,6 @@
       padding: 6px;
     }
 
-    // & > svg {
-    //   pointer-events: none;
-    // }
-
     &:nth-of-type(1) {
       top: 134px;
       left: 346px;
@@ -335,6 +331,28 @@
         left: 31.7%;
       }
     }
+
+    @media ($m-xxxl) {
+      &:nth-of-type(1) {
+        top: 32.8%;
+        left: 38.7%;
+      }
+
+      &:nth-of-type(2) {
+        top: 43.3%;
+        left: 32.3%;
+      }
+
+      &:nth-of-type(3) {
+        top: 60%;
+        left: 39%;
+      }
+
+      &:nth-of-type(4) {
+        top: 72.3%;
+        left: 32.5%;
+      }
+    }
   }
 
   &__floor-and-space {
@@ -358,6 +376,11 @@
       line-height: 50px;
       margin-right: 12px;
     }
+
+    @media ($m-xxxl) {
+      font-size: 48px;
+      line-height: 62px;
+    }
   }
 
   &__space {
@@ -368,6 +391,10 @@
     @media ($m-s) {
       font-size: 18px;
       line-height: 22px;
+    }
+
+    @media ($m-xxxl) {
+      line-height: 25px;
     }
   }
 
@@ -381,6 +408,12 @@
     @media ($m-s) {
       font-size: 18px;
       line-height: 22px;
+    }
+
+    @media ($m-xxxl) {
+      line-height: 25px;
+
+      margin-bottom: 10px;
     }
   }
 
@@ -472,11 +505,21 @@
       height: auto;
     }
 
+    @media ($m-xxxl) {
+      min-width: 305px;
+      min-height: 202px;
+      padding: 24px;
+    }
+
     hr {
       margin-bottom: 14px;
       height: 2px;
 
       background: $c-orange-light;
+
+      @media ($m-xxxl) {
+        margin-bottom: 16px;
+      }
     }
 
     &-wrap {
